HDX-9345 fix mobile menu padding, align mobile menu mav links, improve order by dropdowns, remove search recs whitespace

--- a/ckanext-hdx_theme/ckanext/hdx_theme/fanstatic/base/header.css
+++ b/ckanext-hdx_theme/ckanext/hdx_theme/fanstatic/base/header.css
@@ -103,6 +103,7 @@
 .control-order-by {
   float: right;
   height: inherit;
+  vertical-align: middle;
 }
 .control-order-by label {
   font-family: 'Gotham-Bold', sans-serif;
@@ -111,33 +112,39 @@
   color: #888888;
   letter-spacing: 0.03em;
   line-height: 20px;
+  margin-right: 5px;
 }
 .control-order-by .orderDropdown {
   display: inline;
 }
-.control-order-by .orderDropdown .dropdown-toggle {
-  background-color: #fff;
-  border: none;
+.control-order-by .orderDropdown #field-order-by {
+  background-color: transparent;
+  border: 0;
   color: #007CE0;
   text-align: left;
   margin-top: -4px;
   padding: 0;
-  font-size: 14px;
+  font-size: 12px;
+  line-height: 20px;
 }
-.control-order-by .orderDropdown .dropdown-toggle:hover,
-.control-order-by .orderDropdown .dropdown-toggle:focus {
+.control-order-by .orderDropdown #field-order-by:hover,
+.control-order-by .orderDropdown #field-order-by:focus {
   color: #00447a;
 }
 .control-order-by .orderDropdown .dropdown-toggle-text {
   font-family: 'Gotham-Bold', sans-serif;
   font-weight: 400;
-  font-size: 14px;
+  font-size: 12px;
   color: #007CE0;
   letter-spacing: 0.03em;
 }
 .control-order-by .orderDropdown .dropdown-toggle-text:hover,
 .control-order-by .orderDropdown .dropdown-toggle-text:focus {
   color: #00447a;
+}
+.control-order-by .orderDropdown .humanitarianicons-Down {
+  vertical-align: middle;
+  cursor: pointer;
 }
 /* END DropDown style */
 /* Items per page style - based on orderDropdown */
@@ -170,13 +177,6 @@
   width: 90%;
 }
 /* END - Items per page  style */
-#field-order-by {
-  border: 0;
-  background-color: transparent;
-}
-#field-order-by::after {
-  display: none;
-}
 /* Customize fixed Bootstrap layout -- ugly hacking :) */
 .container,
 .navbar-static-top .container,
@@ -3858,6 +3858,7 @@ ul.list-horizontal li:first-child:before {
   line-height: 18px;
   padding: 3px 30px;
   text-transform: uppercase;
+  display: block;
 }
 .new-header .hdx-header .navbar-collapse .nav > li.crisis span {
   font-size: 9px;
