--- a/ckanext-hdx_theme/ckanext/hdx_theme/fanstatic/search_/search.css
+++ b/ckanext-hdx_theme/ckanext/hdx_theme/fanstatic/search_/search.css
@@ -245,7 +245,7 @@
 /* END - Show full text on hover over select2 options */
 /* Styling search recommendations */
 #search-recs {
-  margin-top: 25px;
+  padding-top: 25px;
   font-family: 'Source Sans Pro', sans-serif;
   font-weight: 400;
   font-size: 16px;
