--- a/ckanext-hdx_theme/ckanext/hdx_theme/hdx-styles/src/common/less/light/custom_pages/custom-pages-light.less
+++ b/ckanext-hdx_theme/ckanext/hdx_theme/hdx-styles/src/common/less/light/custom_pages/custom-pages-light.less
@@ -75,7 +75,7 @@
       height: 20px;
       margin-bottom: 0;
       align-items: flex-end;
-      .dropdown-toggle {
+      #field-order-by {
         display: flex;
         align-items: center;
       }
