--- a/ckanext-hdx_theme/ckanext/hdx_theme/hdx-styles/src/common/less/light/search/search-light.less
+++ b/ckanext-hdx_theme/ckanext/hdx_theme/hdx-styles/src/common/less/light/search/search-light.less
@@ -33,7 +33,7 @@
       height: 20px;
       margin-bottom: 0;
       align-items: flex-end;
-      .dropdown-toggle {
+      #field-order-by {
         display: flex;
         align-items: center;
       }
@@ -50,9 +50,8 @@
   }
 }
 #search-recs {
-  .sourceSansProFont(400, 14px);
-  margin-top: 20px;
-  color: @darkGrayColor;
+  .sourceSansProFont(400, 14px) !important;
+  padding-top: 15px !important;
 }
 .search-list {
 
